--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,9 +1,7 @@
-# Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/book/service_container.html
-parameters:
-#    parameter_name: value
-
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  security.form_authenticator:
+    class: AppBundle\Security\FormAuthenticator
+    arguments:
+      - '@doctrine.orm.entity_manager'
+      - '@router'
+      - '@session'
