--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
   "require-dev": {
     "sensio/generator-bundle": "~3.0",
     "symfony/phpunit-bridge": "~2.7",
-    "phpunit/phpunit": "^5.5"
+    "phpunit/phpunit": "^5.5",
+    "doctrine/doctrine-fixtures-bundle": "^2.3"
   },
   "scripts": {
     "post-install-cmd": [
