--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,8 +43,16 @@ doctrine:
 
   orm:
     auto_generate_proxy_classes: "%kernel.debug%"
-    naming_strategy: doctrine.orm.naming_strategy.underscore
-    auto_mapping: true
+    entity_managers:
+      default:
+        naming_strategy: doctrine.orm.naming_strategy.underscore
+        auto_mapping: true
+
+stof_doctrine_extensions:
+  default_locale: en_US
+  orm:
+    default:
+      timestampable: true
 
 # Swiftmailer Configuration
 swiftmailer:
