--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -5,3 +5,8 @@ services:
       - '@doctrine.orm.entity_manager'
       - '@router'
       - '@session'
+
+  app.twig_extension:
+    class: AppBundle\Twig\AppExtension
+    tags:
+      - { name: twig.extension }
