--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,6 +11,6 @@ services:
     tags:
       - { name: twig.extension }
 
-  doctrine.entity_manager:
-    class: AppBundle\Doctrine\EntityManager
+  service.entity_manager:
+    class: AppBundle\Service\EntityManager
     arguments: ['@doctrine.orm.entity_manager']
