--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,6 +1,6 @@
 imports:
-  - { resource: parameters.yml }
-  - { resource: ../config.yml }
+  - { resource: parameters_dev.yml }
+  - { resource: config.yml }
 
 framework:
   router:
