--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,6 +1,6 @@
 imports:
-  - { resource: parameters.yml }
-  - { resource: ../config.yml }
+  - { resource: parameters_prod.yml.yml }
+  - { resource: config.yml }
 
 #framework:
 #    validation:
